			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2006-01-29

	* The configure script, when checking Berkeley DB capabilities,
	  now checks for logging and transactional subsystems rather
	  than the locking subsystem that we abandoned before 1.0.0.

	2006-01-28

	* Only print Berkely DB file size message once per run.

	2006-01-21

	* 1.0.1 Promoted to "Stable" status

	2006-01-02

	* Fixed --input-file and --output-file command line options.

	2006-01-01

	* Added CVE-2005 identifiers for defects described in
          doc/bogofilter-SA-2005-01

1.0.1	2006-01-01

	* New names for binary rpms:

	  bogofilter-db42 - requires shared library for DB-4.2.52
	  bogofilter-db42-static - statically linked with DB-4.2.52
	  bogofilter-sqlite3 - requires shared library for SQLite3-3.2.8
	  bogofilter-sqlite3-static - statically linked with SQLite3-3.2.8

	2005-12-30

	* The configure help texts have been revised, the IEEE checks
	  for trio have been simplified (they are no longer nested) and
	  configure.ac has been updated to quiet autoconf -Wobsolete
	  warnings. The README file now reflects the new requirements.

	2005-12-29

	* For maintainers: Add install-staticdblibs.sh, a script to
	  fetch and build static & lean BerkeleyDB 4.2.52.4 and SQLite
	  3.2.8 libraries. Modify some parts of the RPM building so that
	  the binary RPMs are built without external dependencies beyond
	  glibc 2.2. This may render "make rpm" unusable on non-Linux
	  platforms, but you should still be able to "rpmbuild -tb" from
	  the source .tar.gz file.

	2005-12-27

	* Add '-O' option to direct bogoutil output to a file.