@@ -30,7 +30,7 @@ extern	double	msg_compute_spamicity(wordhash_t *wordhash, FILE *fp) /*@globals e
 extern	double	msg_spamicity(void);
 extern	rc_t	msg_status(void);
 extern	void	msg_print_stats(FILE *fp);
-extern	void	msg_print_summary(void);
+extern	void	msg_print_summary(const char *pfx);
 
 extern	 void	print_summary(void);
 
